--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "messageformat": "^2.3.0",
     "module": "^1.2.5",
     "moment": "^2.29.1",
+    "nanoid": "^3.3.2",
     "ngx-progressbar": "^6.0.2",
     "ngx-translate-messageformat-compiler": "^4.9.0",
     "roboto-fontface-material": "^0.1.0",
@@ -52,6 +53,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^12.11.1",
+    "@types/resize-observer-browser": "^0.1.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
